[gd_scene load_steps=11 format=3 uid="uid://ciyjx4d1y2s5c"]

[ext_resource type="Script" path="res://Scripts/UI/Board's Stuff/BoardComponentInterface.gd" id="1_wxhaf"]
[ext_resource type="Texture2D" uid="uid://cos0g1d03u1ta" path="res://Textures/collapse icon.png" id="2_wqli8"]
[ext_resource type="StyleBox" uid="uid://b4b4ad3bh37ev" path="res://Themes & Styles/UI Element/idle_UI_board_element.tres" id="3_tagak"]
[ext_resource type="Texture2D" uid="uid://dwekgm8etfla" path="res://Textures/ic_icon.png" id="4_8ymhn"]
[ext_resource type="Texture2D" uid="uid://blcvhx2dqrtqa" path="res://Textures/visible.png" id="5_s1kff"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_c7pim"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rruxx"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_q1y1u"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_dt3v6"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_b6p15"]

[node name="VBoxContainer" type="VBoxContainer" node_paths=PackedStringArray("children_container", "box")]
offset_right = 67.0
offset_bottom = 28.0
size_flags_horizontal = 3
theme_override_constants/separation = 0
script = ExtResource("1_wxhaf")
children_container = NodePath("MarginContainer/children container")
box = NodePath("HBoxContainer/PanelContainer")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Collapse Button" type="Button" parent="HBoxContainer"]
visible = false
custom_minimum_size = Vector2(16, 0)
layout_mode = 2
focus_mode = 0
mouse_filter = 1
theme_override_styles/normal = SubResource("StyleBoxEmpty_c7pim")
theme_override_styles/hover = SubResource("StyleBoxEmpty_rruxx")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_q1y1u")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_dt3v6")
theme_override_styles/focus = SubResource("StyleBoxEmpty_b6p15")
flat = true

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/Collapse Button"]
modulate = Color(0.486275, 0.486275, 0.486275, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(8, 14)
texture = ExtResource("2_wqli8")
expand_mode = 1
stretch_mode = 5

[node name="PanelContainer" type="PanelContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
theme_override_styles/panel = ExtResource("3_tagak")

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/PanelContainer/HBoxContainer"]
modulate = Color(0.486275, 0.486275, 0.486275, 1)
custom_minimum_size = Vector2(25, 0)
layout_mode = 2
texture = ExtResource("4_8ymhn")
expand_mode = 4
stretch_mode = 4

[node name="Label" type="Label" parent="HBoxContainer/PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "and"

[node name="Visibility Button" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(16, 0)
layout_mode = 2
focus_mode = 0
mouse_filter = 1
theme_override_styles/normal = SubResource("StyleBoxEmpty_c7pim")
theme_override_styles/hover = SubResource("StyleBoxEmpty_rruxx")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_q1y1u")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_dt3v6")
theme_override_styles/focus = SubResource("StyleBoxEmpty_b6p15")
flat = true

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/Visibility Button"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(8, 14)
texture = ExtResource("5_s1kff")
expand_mode = 1
stretch_mode = 5

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 16

[node name="children container" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[connection signal="pressed" from="HBoxContainer/Collapse Button" to="." method="_on_collapse"]
[connection signal="pressed" from="HBoxContainer/Visibility Button" to="." method="_toggle_visibility"]
[connection signal="child_order_changed" from="MarginContainer/children container" to="." method="_on_children_container_child_order_changed"]
